Inclusao de endpoint de atualizacao de veiculo
